--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
     <!--Main-->
     <main>
         <!--Section Hero-->
-        <section class="hero">
+        
+        <section class="hero overlay">
             <h1 class="hero-title">Эфективные решения <br> для вашего бизнеса</h1>
             <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
+        
         <!--Co Abilities-->
         <section class="details-section">
             <div class="container">
