--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
     <!--Main-->
     <main>
         <!--Section Hero-->
-        
         <section class="hero overlay">
-            <h1 class="hero-title">Эфективные решения <br> для вашего бизнеса</h1>
+            <h1 class="hero-title">Эфективные решения для вашего бизнеса</h1>
             <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         
