--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <!--Section Hero-->
         <section class="hero overlay">
-            <h1 class="hero-title">Эфективные решения для вашего бизнеса</h1>
+            <h1 class="hero-title">Эфективные решения <br> для вашего бизнеса</h1>
             <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         
@@ -55,7 +55,7 @@
                 <h2 class="section-title" hidden>Blind</h2>
 
                 <ul class="details-list">
-                    <li class="details-item">
+                    <li class="details-item ">
                         <h3 class="details-title">внимание к деталям</h3>
                         <p class="details-text">
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
