--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
                 <h2 class="section-title" hidden>Blind</h2>
 
                 <ul class="details-list">
-                    <li class="details-item ">
+                    <li class="details-item icon-sputnik">
                         <h3 class="details-title">внимание к деталям</h3>
                         <p class="details-text">
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
-                    <li class="details-item">
+                    <li class="details-item icon-watch">
                         <h3 class="details-title">пунктуальность</h3>
                         <p class="details-text">
                             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
-                    <li class="details-item">
+                    <li class="details-item icon-laptop">
                         <h3 class="details-title">планирование</h3>
                         <p class="details-text">
                             Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
-                    <li class="details-item">
+                    <li class="details-item icon-astronaut">
                         <h3 class="details-title">современные технологии</h3>
                         <p class="details-text">
                             Значимость этих проблем настолько очевидна, что реализация плановых заданий.
