--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             </nav>
             <ul class="header-list">
                 <li class="header-item">
-                    <a class="header-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="header-address icon-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-address" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="header-address icon-telefon" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
