--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,11 @@
             </nav>
             <ul class="header-list">
                 <li class="header-item">
-                    <a class="header-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="header-address" href="mailto:info@devstudio.com">
+                        <svg class="icon-mail" width="16" height="12">
+                        <use href="./images/symbol-defs.svg#icon-konvert"></use>    
+                        </svg>
+                        info@devstudio.com</a>
                 </li>
                 <li class="header-item">
                     <a class="header-address" href="tel:+380961111111">+38 096 111 11 11</a>
