Оформление иконок нашей команды

--- a/index.html
+++ b/index.html
@@ -177,6 +177,36 @@
                             <div class="team-container">
                             <h3 class="team-title">Ольга Репина</h3>
                             <p class="team-text">Frontend Developer</p>
+                            <ul class="team-social-items">
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"
+                                        </use>
+                                    </svg>
+                                    </a>       
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"</use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-facebook" </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin" </use>
+                                        </svg>
+                                    </a>
+                                </li>
                             </div>
                         </li>
                         
@@ -185,6 +215,36 @@
                             <div class="team-container">
                             <h3 class="team-title">Николай Тарасов</h3>
                             <p class="team-text">Marketing</p>
+                            <ul class="team-social-items">
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"
+                                        </use>
+                                    </svg>
+                                    </a>       
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"</use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-facebook" </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin" </use>
+                                        </svg>
+                                    </a>
+                                </li>
                             </div>
                         </li>
                         <li class="team-item">
@@ -192,6 +252,36 @@
                             <div class="team-container">
                             <h3 class="team-title">Михаил Ермаков</h3>
                             <p class="team-text">UI Designer</p>
+                            <ul class="team-social-items">
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-instagram"
+                                        </use>
+                                    </svg>
+                                    </a>       
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-twitter"</use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-facebook" </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" class="team-social-link">
+                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                            <use href="./images/symbol-defs.svg#icon-linkedin" </use>
+                                        </svg>
+                                    </a>
+                                </li>
                             </div>
                         </li>
                     </ul>
