Сделаны иконки соц сетей, тени

--- a/portfolio.html
+++ b/portfolio.html
@@ -134,6 +134,7 @@
     </main>
     <!--footer-->
     <footer class="footer">
+        <div class="container-footer-social">
         <div class="container">
             <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
             <address class="address">
@@ -147,6 +148,41 @@
                     </li>
                 </ul>
             </address>
+        </div>
+
+        <div class="container-footer">
+            <h2 class="join">присоединяйтесь</h2>
+            <ul class="team-social-items">
+                <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                        <svg class="social-icon-size fill-icon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-instagram"
+                        </use>
+                    </svg>
+                    </a>       
+                </li>
+                <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                        <svg class="social-icon-size fill-icon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-twitter"</use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                        <svg class="social-icon-size fill-icon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-facebook" </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="team-social-item">
+                    <a href="#" class="team-social-link">
+                        <svg class="social-icon-size fill-icon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-linkedin" </use>
+                        </svg>
+                    </a>
+                </li>
+        </div>
         </div>
     </footer>
 </body>
