--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                     <li class="header-item">
                         <a class="header-address" href="mailto:info@devstudio.com">
                             <svg class="icon-mail" width="16" height="12">
-                            <use href="./images/symbol-defs.svg#icon-konvert"></use>    
+                            <use href="./images/symbol-defs.svg#icon-envelope"></use>    
                             </svg>
                             info@devstudio.com</a>
                     </li>
                     <li class="header-item">
                         <a class="header-address" href="tel:+380961111111">
                             <svg class="icon-telefon" width="10" height="16">
-                        <use href="./images/symbol-defs.svg#icon-telefon"</use>
+                        <use href="./images/symbol-defs.svg#icon-smartphone"</use>
                             </svg>                   
                             +38 096 111 11 11</a>
                     </li>
@@ -67,7 +67,7 @@
                             <h3 class="details-title">
                             <div class="details-icon-sputnik">
                                 <svg class="icon-sputnik" width="65" height="70">
-                            <use href="./images/symbol-defs.svg#icon-sputnik"</use>
+                            <use href="./images/symbol-defs.svg#icon-antenna"</use>
                             </svg>
                         </div>
                             внимание к деталям</h3>
@@ -79,7 +79,7 @@
                             <h3 class="details-title">
                             <div class="details-icon-watch">
                             <svg class="icon-watch" width="67" height="70">
-                            <use href="./images/symbol-defs.svg#icon-clock-1" </use> 
+                            <use href="./images/symbol-defs.svg#icon-clock" </use> 
                             </svg>
                             </div>
                                 пунктуальность</h3>
@@ -91,7 +91,7 @@
                             <h3 class="details-title">
                             <div class="details-icon-nout">
                             <svg class="icon-watch" width="70" height="54">
-                            <use href="./images/symbol-defs.svg#icon-nout" </use>
+                            <use href="./images/symbol-defs.svg#icon-diagram" </use>
                             </svg>
                             </div>
                                 планирование</h3>
@@ -103,7 +103,7 @@
                             <h3 class="details-title">
                             <div class="details-icon-astronaut">
                                 <svg class="icon-watch" width="70" height="70">
-                                    <use href="./images/symbol-defs.svg#icon-astronaut-1" </use>
+                                    <use href="./images/symbol-defs.svg#icon-astronaut" </use>
                                 </svg>
                             </div>
                                 современные технологии</h3>
@@ -144,7 +144,7 @@
                             <ul class="team-social-items">
                             <li class="team-social-item">
                                 <a href="#" class="team-social-link">
-                                    <svg class="social-icon-size fill-icon" width="44" height="44">
+                                    <svg class="social-icon-size fill-icon" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#icon-instagram"
                                     </use>
                                 </svg>
@@ -152,21 +152,21 @@
                             </li>
                             <li class="team-social-item">
                                 <a href="#" class="team-social-link">
-                                    <svg class="social-icon-size fill-icon" width="44" height="44">
+                                    <svg class="social-icon-size fill-icon" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#icon-twitter"</use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="#" class="team-social-link">
-                                    <svg class="social-icon-size fill-icon" width="44" height="44">
+                                    <svg class="social-icon-size fill-icon" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#icon-facebook" </use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="team-social-item">
                                 <a href="#" class="team-social-link">
-                                    <svg class="social-icon-size fill-icon" width="44" height="44">
+                                    <svg class="social-icon-size fill-icon" width="20" height="20">
                                         <use href="./images/symbol-defs.svg#icon-linkedin" </use>
                                     </svg>
                                 </a>
@@ -180,7 +180,7 @@
                             <ul class="team-social-items">
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-instagram"
                                         </use>
                                     </svg>
@@ -188,21 +188,21 @@
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-twitter"</use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-facebook" </use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-linkedin" </use>
                                         </svg>
                                     </a>
@@ -218,7 +218,7 @@
                             <ul class="team-social-items">
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-instagram"
                                         </use>
                                     </svg>
@@ -226,21 +226,21 @@
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-twitter"</use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-facebook" </use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-linkedin" </use>
                                         </svg>
                                     </a>
@@ -255,7 +255,7 @@
                             <ul class="team-social-items">
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-instagram"
                                         </use>
                                     </svg>
@@ -263,21 +263,21 @@
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-twitter"</use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-facebook" </use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team-social-item">
                                     <a href="#" class="team-social-link">
-                                        <svg class="social-icon-size fill-icon" width="44" height="44">
+                                        <svg class="social-icon-size fill-icon" width="20" height="20">
                                             <use href="./images/symbol-defs.svg#icon-linkedin" </use>
                                         </svg>
                                     </a>
@@ -287,9 +287,59 @@
                     </ul>
                 </div>
             </section>
+            <section class="section">
+            <div class="container-clients">
+            <h2 class="section-title-clients">Постоянные клиенты</h2>
+            <ul class="client-list">
+            <li class="client-item">
+            <a href="" class="clients"> 
+            <svg class="client-logo" widht="41" height="46.7">
+            <use href="./images/symbol-defs.svg#icon-client1"></use>    
+            </svg>    
+            </a>    
+            </li>
+            <li class="client-item">
+            <a href="" class="clients"> 
+            <svg class="client-logo" widht="40" height="52">
+            <use href="./images/symbol-defs.svg#icon-client2"></use>    
+            </svg>    
+            </a>    
+            </li>
+            <li class="client-item">
+            <a href="" class="clients"> 
+            <svg class="client-logo" widht="43.46" height="41.18">
+            <use href="./images/symbol-defs.svg#icon-client3"></use>    
+            </svg>    
+            </a>    
+            </li>
+            <li class="client-item">
+            <a href="" class="clients"> 
+            <svg class="client-logo" widht="84.44" height="40.62">
+            <use href="./images/symbol-defs.svg#icon-client4"></use>    
+            </svg>    
+            </a>    
+            </li>
+            <li class="client-item">
+            <a href="" class="clients"> 
+            <svg class="client-logo" widht="62.54" height="45.43">
+            <use href="./images/symbol-defs.svg#icon-clien5"></use>    
+            </svg>    
+            </a>    
+            </li>
+            <li class="client-item">
+            <a href="" class="clients"> 
+            <svg class="client-logo" widht="93.79" height="43.93">
+            <use href="./images/symbol-defs.svg#icon-client6"></use>    
+            </svg>    
+            </a>    
+            </li>
+            </ul>
+            </div>
+            </section>
         </main>
         <!--footer-->
         <footer class="footer">
+            <div class="container-footer-social">
             <div class="container">
                 <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
                 <address class="address">
@@ -303,6 +353,41 @@
                         </li>
                     </ul>
                 </address>
+            </div>
+
+            <div class="container-footer">
+                <h2 class="join">присоединяйтесь</h2>
+                <ul class="team-social-items">
+                    <li class="team-social-item">
+                        <a href="#" class="team-social-link">
+                            <svg class="social-icon-size fill-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-instagram"
+                            </use>
+                        </svg>
+                        </a>       
+                    </li>
+                    <li class="team-social-item">
+                        <a href="#" class="team-social-link">
+                            <svg class="social-icon-size fill-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-twitter"</use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="team-social-item">
+                        <a href="#" class="team-social-link">
+                            <svg class="social-icon-size fill-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-facebook" </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="team-social-item">
+                        <a href="#" class="team-social-link">
+                            <svg class="social-icon-size fill-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-linkedin" </use>
+                            </svg>
+                        </a>
+                    </li>
+            </div>
             </div>
         </footer>
     </body>
