--- a/index.html
+++ b/index.html
@@ -293,42 +293,42 @@
             <ul class="client-list">
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="41" height="46.7">
+            <svg class="client-logo" widht="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client1"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="40" height="52">
+            <svg class="client-logo" widht="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client2"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="43.46" height="41.18">
+            <svg class="client-logo" widht="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client3"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="84.44" height="40.62">
+            <svg class="client-logo" widht="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client4"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="62.54" height="45.43">
+            <svg class="client-logo" widht="106" height="60">
             <use href="./images/symbol-defs.svg#icon-clien5"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="93.79" height="43.93">
+            <svg class="client-logo" widht="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client6"></use>    
             </svg>    
             </a>    
@@ -339,8 +339,8 @@
         </main>
         <!--footer-->
         <footer class="footer">
-            <div class="container-footer-social">
-            <div class="container">
+            <!-- <div class="container-footer-social"> -->
+            <div>
                 <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
                 <address class="address">
                     <ul class="address-list">
@@ -355,7 +355,7 @@
                 </address>
             </div>
 
-            <div class="container-footer">
+            <div>
                 <h2 class="join">присоединяйтесь</h2>
                 <ul class="team-social-items">
                     <li class="team-social-item">
@@ -387,7 +387,6 @@
                             </svg>
                         </a>
                     </li>
-            </div>
             </div>
         </footer>
     </body>
