--- a/portfolio.html
+++ b/portfolio.html
@@ -23,25 +23,30 @@
             <a href="./" class="header-logo"><span class="logo-accent">Web</span>Studio</a>
             <nav>
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Студия</a></li>
-                    <li class="nav-item"><a class="nav-link current" href="#">Портфолио</a></li>
+                    <li class="nav-item"><a class="nav-link current" href="#">Студия</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="header-list">
                 <li class="header-item">
                     <a class="header-address" href="mailto:info@devstudio.com">
-                        <svg class="icon-mail" width="16" height="12">
-                        <use href="./images/symbol-defs.svg#icon-konvert"></use>    
+                        <svg class="icon-mail" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-address" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="header-address" href="tel:+380961111111">
+                        <svg class="icon-telefon" width="20" height="20">
+                            <use href="./images/symbol-defs.svg#icon-smartphone" </use>
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
     </header>
+    <!-- Main -->
     <main class="portfolio-main">
         <!--Buttons-->
 
@@ -134,8 +139,8 @@
     </main>
     <!--footer-->
     <footer class="footer">
-        <div class="container-footer-social">
-        <div class="container">
+        <!-- <div class="container-footer-social"> -->
+        <div>
             <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
             <address class="address">
                 <ul class="address-list">
@@ -149,22 +154,21 @@
                 </ul>
             </address>
         </div>
-
-        <div class="container-footer">
+    
+        <div>
             <h2 class="join">присоединяйтесь</h2>
             <ul class="team-social-items">
                 <li class="team-social-item">
                     <a href="#" class="team-social-link">
                         <svg class="social-icon-size fill-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-instagram"
-                        </use>
-                    </svg>
-                    </a>       
+                            <use href="./images/symbol-defs.svg#icon-instagram" </use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="team-social-item">
                     <a href="#" class="team-social-link">
                         <svg class="social-icon-size fill-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-twitter"</use>
+                            <use href="./images/symbol-defs.svg#icon-twitter" </use>
                         </svg>
                     </a>
                 </li>
@@ -182,7 +186,6 @@
                         </svg>
                     </a>
                 </li>
-        </div>
         </div>
     </footer>
 </body>
