--- a/index.html
+++ b/index.html
@@ -287,48 +287,48 @@
                     </ul>
                 </div>
             </section>
-            <section class="section">
+            <section class="section-clients">
             <div class="container-clients">
             <h2 class="section-title-clients">Постоянные клиенты</h2>
             <ul class="client-list">
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="106" height="60">
+            <svg class="client-logo" width="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client1"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="106" height="60">
+            <svg class="client-logo" width="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client2"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="106" height="60">
+            <svg class="client-logo" width="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client3"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="106" height="60">
+            <svg class="client-logo" width="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client4"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="106" height="60">
+            <svg class="client-logo" width="106" height="60">
             <use href="./images/symbol-defs.svg#icon-clien5"></use>    
             </svg>    
             </a>    
             </li>
             <li class="client-item">
             <a href="" class="clients"> 
-            <svg class="client-logo" widht="106" height="60">
+            <svg class="client-logo" width="106" height="60">
             <use href="./images/symbol-defs.svg#icon-client6"></use>    
             </svg>    
             </a>    
@@ -339,7 +339,7 @@
         </main>
         <!--footer-->
         <footer class="footer">
-            <!-- <div class="container-footer-social"> -->
+            <div class="container footer-flex">
             <div>
                 <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
                 <address class="address">
@@ -355,7 +355,7 @@
                 </address>
             </div>
 
-            <div>
+            <div class="join-list">
                 <h2 class="join">присоединяйтесь</h2>
                 <ul class="team-social-items">
                     <li class="team-social-item">
@@ -387,6 +387,7 @@
                             </svg>
                         </a>
                     </li>
+            </div>
             </div>
         </footer>
     </body>
