--- a/portfolio.html
+++ b/portfolio.html
@@ -139,53 +139,54 @@
     </main>
     <!--footer-->
     <footer class="footer">
-        <!-- <div class="container-footer-social"> -->
-        <div>
-            <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
-            <address class="address">
-                <ul class="address-list">
-                    <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-                    <li class="address-item">
-                        <a class="address-link" href="mailto:info@example.com">info@example.com</a>
-                    </li>
-                    <li class="address-item">
-                        <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
-        </div>
+        <div class="container footer-flex">
+            <div>
+                <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
+                <address class="address">
+                    <ul class="address-list">
+                        <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
+                        <li class="address-item">
+                            <a class="address-link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="address-item">
+                            <a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
     
-        <div>
-            <h2 class="join">присоединяйтесь</h2>
-            <ul class="team-social-items">
-                <li class="team-social-item">
-                    <a href="#" class="team-social-link">
-                        <svg class="social-icon-size fill-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-instagram" </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="team-social-item">
-                    <a href="#" class="team-social-link">
-                        <svg class="social-icon-size fill-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-twitter" </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="team-social-item">
-                    <a href="#" class="team-social-link">
-                        <svg class="social-icon-size fill-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-facebook" </use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="team-social-item">
-                    <a href="#" class="team-social-link">
-                        <svg class="social-icon-size fill-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-linkedin" </use>
-                        </svg>
-                    </a>
-                </li>
+            <div class="join-list">
+                <h2 class="join">присоединяйтесь</h2>
+                <ul class="team-social-items">
+                    <li class="team-social-item">
+                        <a href="#" class="team-social-link">
+                            <svg class="social-icon-size fill-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-instagram" </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="team-social-item">
+                        <a href="#" class="team-social-link">
+                            <svg class="social-icon-size fill-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-twitter" </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="team-social-item">
+                        <a href="#" class="team-social-link">
+                            <svg class="social-icon-size fill-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-facebook" </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="team-social-item">
+                        <a href="#" class="team-social-link">
+                            <svg class="social-icon-size fill-icon" width="20" height="20">
+                                <use href="./images/symbol-defs.svg#icon-linkedin" </use>
+                            </svg>
+                        </a>
+                    </li>
+            </div>
         </div>
     </footer>
 </body>
