--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="./" class="header-logo"><span class="logo-accent">Web</span>Studio</a>
                 <nav>
                     <ul class="nav-list">
-                        <li class="nav-item"><a class="nav-link current" href="#">Студия</a></li>
+                        <li class="nav-item current"><a class="nav-link current" href="#">Студия</a></li>
                         <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
                     </ul>
@@ -53,7 +53,7 @@
             <!--Section Hero-->
             <section class="hero overlay">
                 <h1 class="hero-title">Эфективные решения <br> для вашего бизнеса</h1>
-                <button type="button" class="hero-btn">Заказать услугу</button>
+                <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
             </section>
             
             <!--Co Abilities-->
@@ -396,6 +396,17 @@
             </div>
             </div>
         </footer>
+
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button class="modal-close-button" type="button" data-modal-close>
+            <svg width="11" height="11" >
+                <use href="./images/symbol-defs1.svg#icon-close"></use>
+            </svg>
+                </button>
+            </div>
+        </div>
+        <script src="./js/modal.js"></script>
     </body>
 
     </html>
