--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,17 @@
             <div class="container">
                 <ul class="portfolio-list">
                     <li class="porfolio-item">
+                        <div class="portfolio-thumb">
                         <img src="./images/technokryak.jpg " alt="notebook pic" width="370" />
+                    </div>
+                        <div class="portfolio-overlay">
+                         <p class="portfolio-overlay-description">
+                        Ресурс предлагает комплексные предложения с разным уровнем
+                        функционала и сервисов. Все это позволит посетителю
+                        получить исчерпывающие сведения о компании или частном
+                        лице.
+                         </p>
+                        </div>
                         <div class="portfolio-container">
                         <h3 class="portfolio-title">Технокряк</h3>
                         <p class="portfolio-text">Веб-сайт</p>
