--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link current" href="#">Студия</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="nav-item"><a class="nav-link current" href="./portfolio.html">Портфолио</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
                 </ul>
             </nav>
@@ -70,7 +70,7 @@
 
             <div class="container">
                 <ul class="portfolio-list">
-                    <li class="porfolio-item">
+                    <div class="porfolio-item">
                         <div class="portfolio-thumb">
                         <img src="./images/technokryak.jpg " alt="notebook pic" width="370" />
                     </div>
@@ -86,6 +86,7 @@
                         <h3 class="portfolio-title">Технокряк</h3>
                         <p class="portfolio-text">Веб-сайт</p>
                         </div>
+                    </div>
                     </li>
                     <li class="porfolio-item">
                         <img src="./images/basketball.jpg" alt="poster pic" width="370" />
