--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
 
         <section class="portfolio-section">
             <div class="container">
-                <h2 hidden>portfolio title</h2>
+                <h1 hidden="title-hidden">portfolio title</h1>
                 <ul class="btn-list">
                     <li class="btn-item"><button type="button" class="portfolio-button">Все</button></li>
                     <li class="btn-item">
