--- a/portfolio.html
+++ b/portfolio.html
@@ -52,25 +52,26 @@
 
         <section class="portfolio-section">
             <div class="container">
-                <h1 hidden="title-hidden">portfolio title</h1>
+                <h1 hidden="title-hidden">Портфолио</h1>
                 <ul class="btn-list">
-                    <li class="btn-item"><button type="button" class="portfolio-button">Все</button></li>
+                    <li class="btn-item">
+                        <button type="button" class="portfolio-button">Все</button>
+                    </li>
                     <li class="btn-item">
                         <button type="button" class="portfolio-button">Веб-сайты</button>
                     </li>
                     <li class="btn-item">
                         <button type="button" class="portfolio-button">Приложения</button>
                     </li>
-                    <li class="btn-item"><button type="button" class="portfolio-button">Дизайн</button></li>
+                    <li class="btn-item"><button type="button" class="portfolio-button">Дизайн</button>
+                    </li>
                     <li class="btn-item">
                         <button type="button" class="portfolio-button">Маркетинг</button>
                     </li>
                 </ul>
-            </div>
 
-            <div class="container">
                 <ul class="portfolio-list">
-                    <div class="porfolio-item">
+                    <li class="portfolio-cards-item"> </li>
                         <div class="portfolio-thumb">
                         <img src="./images/technokryak.jpg " alt="notebook pic" width="370" />
                     </div>
